almost definitive version

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="monthly">
       <h2>Monthly Subscription</h2>
         <div class="price">
-          <p><span>$29</span> per month</p>
+          <p><span id="price29">$29</span><span id="permonth">per month</span></p>
         </div>
         <p>Full access for less than $1 a day</p>
         <button>Sign Up</button>
